# wash

./: .gitignore  .gitmodules  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Completions.md  Dockerfile  Makefile  README.md  flake.nix  go.work.sum  install.ps1  install.sh  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
crates/wash-lib/: Cargo.toml  README.md
crates/wash-lib/src/: build.rs  lib.rs  registry.rs
crates/wash-lib/src/cli/: claims.rs
crates/wash-lib/src/generate/: emoji.rs  favorites.toml  interactive.rs  mod.rs  project_variables.rs
crates/wash-lib/src/lattice_artifacts/: mod.rs
crates/wash-lib/src/natsclient/: mod.rs
crates/wash-lib/src/parser/: mod.rs
crates/wash-lib/src/start/: download.rs  github.rs  mod.rs  nats.rs  wadm.rs  wasmcloud.rs
crates/wash-lib/tests/parser/: main.rs
crates/wash-lib/tests/parser/files/noconfig/: test.txt
crates/wash-runtime/: Cargo.toml  README.md  build.rs
crates/wash-runtime/proto/: README.md
crates/wash-runtime/proto/wasmcloud/runtime/v2/: host_heartbeat.proto  host_service.proto  workload.proto
crates/wash-runtime/src/: grpc.rs  lib.rs  observability.rs  oci.rs  types.rs  wit.rs
crates/wash-runtime/src/engine/: ctx.rs  mod.rs  value.rs  workload.rs
crates/wash-runtime/src/host/: http.rs  mod.rs  transport.rs
crates/wash-runtime/src/host/transport/: grpc.rs  mod.rs
crates/wash-runtime/src/plugin/: mod.rs  wasi_blobstore.rs  wasi_config.rs  wasi_grpc_client.rs  wasi_http.rs  wasi_http_client.rs  wasi_keyvalue.rs  wasi_logging.rs  wasi_webgpu.rs
crates/wash-runtime/src/plugin/wasi_blobstore/: filesystem.rs  in_memory.rs  mod.rs  nats.rs
crates/wash-runtime/src/plugin/wasi_config/: mod.rs
crates/wash-runtime/src/plugin/wasi_keyvalue/: filesystem.rs  in_memory.rs  mod.rs  nats.rs  redis.rs
crates/wash-runtime/src/plugin/wasi_logging/: mod.rs
crates/wash-runtime/src/plugin/wasi_otel/: convert.rs  mod.rs
crates/wash-runtime/src/plugin/wasi_webgpu/: mod.rs
crates/wash-runtime/src/plugin/wasmcloud_messaging/: in_memory.rs  mod.rs  nats.rs
crates/wash-runtime/src/plugin/wasmcloud_postgres/: conversions.rs  mod.rs
crates/wash-runtime/src/sockets/: host_instance_network.rs  host_ip_name_lookup.rs  host_network.rs  host_tcp.rs  host_tcp_create_socket.rs  host_udp.rs  host_udp_create_socket.rs  mod.rs  network.rs  p2_tcp.rs  p2_udp.rs  tcp.rs  udp.rs  util.rs
crates/wash-runtime/src/sockets/loopback/: mod.rs  tcp.rs  udp.rs
crates/wash-runtime/src/transport/: connector.rs  mod.rs
crates/wash-runtime/src/washlet/: k8s_secrets.rs  mod.rs
crates/wash-runtime/src/washlet/plugins/: mod.rs  wasi_blobstore.rs  wasi_config.rs  wasi_http.rs  wasi_keyvalue.rs  wasi_logging.rs  wasmcloud_messaging.rs
crates/wash-runtime/tests/: dynamic_linking_integration_test.rs  integration_cron_service.rs  integration_grpc_client.rs  integration_http_blobby.rs  integration_http_blobstore.rs  integration_http_client.rs  integration_http_counter.rs  integration_http_keyvalue.rs  integration_http_streaming.rs  integration_http_streaming_gemini.rs  integration_http_webgpu.rs  integration_inter_component_call.rs  integration_k8s_secrets.rs  integration_multi_component_update.rs  integration_oci_pull_secrets.rs  integration_pull_secrets_demo.rs  integration_workload_pull_secrets.rs
crates/wash-runtime/tests/fixtures/: cpu-usage-service.wasm  cron-service.wasm  cron_component.wasm  cron_service.wasm  grpc_hello_world.wasm  http_ai_proxy.wasm  http_blobstore.wasm  http_counter.wasm  http_hello_world.wasm  http_streaming.wasm  http_webgpu.wasm  messaging_handler.wasm
crates/wash-runtime/tests/fixtures/cpu-usage-service/: Cargo.toml
crates/wash-runtime/tests/fixtures/cpu-usage-service/wit/: world.wit
crates/wash-runtime/tests/fixtures/cron-component/: Cargo.toml
crates/wash-runtime/tests/fixtures/cron-component/src/: lib.rs
crates/wash-runtime/tests/fixtures/cron-component/wit/: world.wit
crates/wash-runtime/tests/fixtures/http-blobstore/: Cargo.toml  README.md
crates/wash-runtime/tests/fixtures/http-blobstore/src/: lib.rs
crates/wash-runtime/tests/fixtures/http-counter/: README.md
crates/wash-runtime/tests/fixtures/http-counter/src/: lib.rs
crates/wash-runtime/tests/fixtures/http-counter/wit/: world.wit
crates/wash-runtime/tests/fixtures/inter-component-call-callee/wit/: world.wit
crates/wash-runtime/tests/fixtures/inter-component-call-caller/: Cargo.toml
crates/wash-runtime/tests/fixtures/inter-component-call-middleware/src/: lib.rs
crates/wash-runtime/tests/proto/: helloworld.proto
crates/wash-runtime/wit/: world.wit
crates/wasmcloud/: Cargo.toml  README.md
crates/wasmcloud-config-parser/: Cargo.toml
crates/wasmcloud-config-parser/src/: lib.rs
crates/wasmcloud-config-parser/tests/: test.rs
crates/wasmcloud-config-parser/tests/files/folder/: wasmcloud.toml
crates/wasmcloud/src/: lib.rs  oci.rs  types.rs  wit.rs
crates/wasmcloud/src/engine/: ctx.rs  mod.rs  value.rs  workload.rs
crates/wasmcloud/src/host/: mod.rs  sysinfo.rs
crates/wasmcloud/src/plugin/: mod.rs  wasi_blobstore.rs  wasi_config.rs  wasi_http.rs  wasi_keyvalue.rs  wasi_logging.rs
crates/wasmcloud/tests/: integration_cron_service.rs  integration_http_blobby.rs  integration_http_blobstore.rs  integration_http_counter.rs  integration_http_counter_with_blobstore_fs.rs  integration_http_keyvalue.rs
crates/wasmcloud/tests/fixtures/: cron_service.wasm  http_counter.wasm
examples/grpc-hello-world/: Cargo.toml  build.rs  wasmcloud.toml
examples/grpc-hello-world/src/: lib.rs
examples/http-webgpu/: Cargo.toml  README.md
examples/http-webgpu/.cargo/: config.toml
examples/http-webgpu/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
examples/http-webgpu/.github/workflows/: publish-devcontainer.yml  publish.yml  test.yml
examples/http-webgpu/.wash/: config.json  config.yaml
examples/http-webgpu/src/: lib.rs
plugins/inspect/: .gitignore  Cargo.toml  README.md
plugins/inspect/.wash/: config.json
plugins/inspect/src/: bindings.rs  lib.rs  plugin.rs
plugins/inspect/wit/: world.wit
(+471 files in other folders)
