[package]
name = "wash"
version = "1.0.0-rc.2"
categories = ["wasm", "command-line-utilities"]
description = "The Wasm Shell (wash) for developing and publishing Wasm components"
keywords = ["webassembly", "wasm", "component", "wash", "cli"]
readme = "README.md"
authors = ["The wasmCloud Team"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wash"

[workspace]
members = [
    "crates/wash-runtime",
]

[lib]
name = "wash"
path = "crates/wash/src/lib.rs"

[[bin]]
name = "wash"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[features]
# TODO: Many opportunities to gate the build by features

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, features = ["std"] }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "color", "suggestions", "wrap_help", "cargo", "string"] }
clap_complete = { workspace = true }
clap-markdown = { workspace = true }
ctrlc = { workspace = true }
dialoguer = { workspace = true, features = ["editor", "password", "zeroize", "fuzzy-select", "fuzzy-matcher"] }
etcetera = { workspace = true }
figment = { workspace = true, features = ["json", "env"] }
flate2 = { workspace = true, features = ["rust_backend"] }
humantime = { workspace = true }
indicatif = { workspace = true }
notify = { workspace = true, features = ["macos_fsevent"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "time", "json"] }
url = { workspace = true }
uuid = { workspace = true }
wasm-metadata = { workspace = true }
wasm-pkg-client = { workspace = true }
wasm-pkg-core = { workspace = true }
wash-runtime = { workspace = true, features = ["washlet", "oci", "wasi-config", "wasi-logging"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
which = { workspace = true }
wit-component = { workspace = true }

# Enable WebGPU support on non-Windows platforms
# WebGPU is disabled on Windows due to dependency version conflicts with the windows crate
[target.'cfg(not(target_os = "windows"))'.dependencies]
wash-runtime = { workspace = true, features = ["wasi-webgpu"] }

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
async-nats = { version = "0.44", default-features = false }
atty = { version= "0.2", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false, features = ["derive", "env", "help", "color", "suggestions", "wrap_help", "cargo", "string"] }
clap_complete = { version = "4.5.40", default-features = false }
async-trait = { version = "0.1", default-features = false}
bytes = { version = "1", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "alloc"] }
clap-markdown = { version = "0.1.5", default-features = false }
ctrlc = { version = "3.4.7", default-features = false }
dialoguer = { version = "0.11.0", default-features = false, features = ["editor", "password", "zeroize", "fuzzy-select", "fuzzy-matcher"] }
docker_credential = { version = "1.3.1", default-features = false }
etcetera = { version = "0.10.0", default-features = false }
figment = { version = "0.10.19", default-features = false }
futures = { version = "0.3", default-features = false }
flate2 = { version = "1.0", default-features = false }
hyper = { version = "1.6.0", default-features = false }
humantime = { version = "2.3.0" }
indicatif = { version = "0.18.0", default-features = false }
k8s-openapi = { version = "0.25", default-features = false }
kube = { version = "1", default-features = false }
kube-derive = { version = "1", default-features = false }
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"]}
oci-wasm = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }
opentelemetry = { version = "0.28", default-features = false }
opentelemetry-appender-tracing = { version = "0.28", default-features = false }
opentelemetry-otlp = { version = "0.28", default-features = false }
opentelemetry_sdk = { version = "0.28", default-features = false }
opentelemetry-semantic-conventions = { version = "0.28", default-features = false }
opentelemetry-stdout = { version = "0.28.0", default-features = false }
pbjson = { version = "0.8.0", default-features = false }
pbjson-types = { version = "0.8.0", default-features = false }
pbjson-build = { version = "0.8.0", default-features = false }
prost = { version = "0.14", default-features = false }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = { version = "2.2", default-features = false, features = ["std"] }
schemars = { version = "0.8", default-features = false }
git2 = { version = "0.19", default-features = false }
hostname = { version = "0.4", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
names = { version = "0.14", default-features = false }
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.15.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi", "time", "json"] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.17.0", default-features = false }
wasm-pkg-client = { version = "0.10.0", default-features = false }
wasm-pkg-core = { version = "0.10.0", default-features = false }
wasm-metadata = { version = "0.239.0", default-features = false, features = ["oci"] }
wasmcloud = { path = "crates/wasmcloud", default-features = false }
wasmtime = { version = "38", default-features = false }
wasmtime-wasi = { version = "38", default-features = false }
wasmtime-wasi-io = { version = "38", default-features = false }
wasmtime-wasi-http = { version = "38", default-features = false }
which = { version = "6.0.3", default-features = false }
wit-component = { version = "0.235.0", default-features = false }
wash-runtime = { path = "crates/wash-runtime", default-features = false }

[build-dependencies]
anyhow = { workspace = true, default-features = true }
tonic-prost-build = { workspace = true, default-features = true }
pbjson-build = { workspace = true, default-features = true }


[dev-dependencies]
bytes = { version = "1", default-features = false }
http = { version = "1.3.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring", "pem"] }
wat = { version = "1.239.0", default-features = false }
scopeguard = { version = "1.2", default-features = false }
tempfile = { version = "3.0", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
wash-runtime = { workspace = true, features = ["wasi-keyvalue", "wasi-blobstore"] }

[workspace.metadata.cargo-machete]
ignored = [
    # Used in build.rs
    "pbjson",
    "pbjson-types",
    "serde",
    # Used for protos
    "tonic",
   "tonic-prost",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{name}-v{version}/wash-{ target }{ binary-ext }"
pkg-fmt = "bin"
