[package]
name = "wash-lib"
version = "0.1.0"
authors = ["wasmCloud Team"]
categories = ["wasm", "wasmcloud"]
description = "wasmcloud Shell (wash) libraries"
edition = "2021"
keywords = ["webassembly", "wasmcloud", "wash", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wash"

[badges]
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.51"
futures = "0.3"
#TODO: ensure no openssl
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
async-compression = { version = "0.3", default-features = false, features = ["tokio", "gzip"] }
tokio-tar = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4.2"