[package]
name = "wash-lib"
version = "0.1.0"
authors = ["wasmCloud Team"]
categories = ["wasm", "wasmcloud"]
description = "wasmcloud Shell (wash) libraries"
edition = "2021"
keywords = ["webassembly", "wasmcloud", "wash", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wash"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["start", "parser"]
start = []
parser = []

[dependencies]
anyhow = "1.0.58"
futures = "0.3"
tokio = {version = "1", default-features = false, features = ["process"]}
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
async-compression = { version = "0.3", default-features = false, features = ["tokio", "gzip"] }
tokio-tar = "0.3"
tokio-stream = "0.1"
log = "0.4"
config = {version = "0.13.1", features = ["toml"]}
semver = { version = "1.0.12", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
claim = { git = "https://github.com/Turbo87/rust-claim.git", rev = "23892a3" }
tokio-test = "0.4.2"
