[package]
name = "wash-lib"
version = "0.4.0-alpha.4"
authors = ["wasmCloud Team"]
categories = ["wasm", "wasmcloud"]
description = "wasmcloud Shell (wash) libraries"
edition = "2021"
keywords = ["webassembly", "wasmcloud", "wash", "cli"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wash"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["start", "parser"]
start = ["semver"]
parser = ["config", "semver", "serde", "serde_json"]
cli = ["clap", "term-table"]

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.3", default-features = false, features = ["tokio", "gzip"] }
clap = { version = "4", features = ["derive", "env"], optional = true }
command-group = { version = "1.0.8", features = ["with-tokio"] }
config = { version = "0.13.1", features = ["toml"], optional = true }
console = "0.15"
dialoguer = "0.10.2"
dirs = "4.0"
futures = "0.3"
heck = "0.4"
ignore = "0.4"
indicatif = "0.17.0"
log = "0.4"
nkeys = "0.2.0"
oci-distribution = { version = "0.9.1", default-features = false, features = ["rustls-tls"] }
path-absolutize = {version = "3.0", features = ["once_cell_cache"]}
provider-archive = "0.6.0"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = { version = "1.0.12", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }
serde_with = "2.0.0"
tempfile = "3.2"
test-case = "2.2.1"
thiserror = "1.0"
term-table = { version = "1.3.1", optional = true }
tokio = { version = "1", default-features = false, features = ["process"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
toml = "0.5"
walkdir = "2.3"
wascap = "0.8.0"
weld-codegen = "0.6.0"
cargo_toml = "0.13.0"

[dev-dependencies]
dirs = "4.0"
tokio = {version = "1", features = ["full"]}
claims = "0.7.1"
tempfile = "3"
