[package]
name = "wash-runtime"
version = "0.2.0"
description = "Opinionated wasmtime wrapper that provides a runtime and workload API for executing Wasm components"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wasmCloud/wash"
authors = ["The wasmCloud Team"]
categories = ["wasm"]

[lib]
path = "src/lib.rs"

[features]
default = ["wasi-http", "wasi-config", "wasi-logging", "wasi-blobstore", "wasi-keyvalue", "washlet"]
wasi-http = ["dep:wasmtime-wasi-http"]
oci = ["dep:oci-client", "dep:oci-wasm", "dep:docker_credential", "dep:sha2", "dep:wit-component"]
washlet = ["oci"]
wasi-config = []
wasi-logging = []
wasi-blobstore = []
wasi-keyvalue = []
wasi-webgpu = ["wasi-webgpu-wasmtime", "wasi-graphics-context-wasmtime"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["aws-lc-rs"] }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
hyper = { workspace = true, features = ["server", "http1"] }
names = { workspace = true }
semver = { workspace = true }
sysinfo = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "net", "macros"] }
tracing = { workspace = true }
wasmtime = { workspace = true, features = ["component-model", "cranelift", "pooling-allocator"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true, optional = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true, features = [
    "gzip",
    "tls-aws-lc",
    "transport",
    "router",
    "codegen",
    "tls-native-roots",
] }
pbjson = { workspace = true, default-features = true }
pbjson-types = { workspace = true, default-features = true }
prost = { workspace = true, default-features = true }
tonic-prost = { workspace = true, default-features = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { workspace = true }
wasi-graphics-context-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime.git", rev = "476bec98a86ad599be8638a38d00a1fbb64188fd", optional = true }
wasi-webgpu-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime.git", rev = "476bec98a86ad599be8638a38d00a1fbb64188fd", optional = true }

# OCI dependencies (optional, behind 'oci' feature)
docker_credential = { workspace = true, optional = true }
oci-client = { workspace = true, optional = true, features = ["rustls-tls", "rustls-tls-native-roots"] }
oci-wasm = { workspace = true, optional = true, features = ["rustls-tls"] }
sha2 = { workspace = true, optional = true }
wit-component = { workspace = true, optional = true }

[build-dependencies]
anyhow = { workspace = true, default-features = true }
tonic-prost-build = { workspace = true, default-features = true }
pbjson-build = { workspace = true, default-features = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
gag = "1.0"
