[package]
name = "wasmcloud-config"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
config = {version = "0.13.1", features = ["toml"]}
semver = { version = "1.0.12", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
