[package]
name = "grpc-hello-world"
edition = "2021"
version = "0.1.0"

[package.metadata.cargo-machete]
ignored = ["prost"]

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-component = "0.2.0"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
prost = "0.13"
wasmcloud-grpc-client = { git = "https://github.com/Aditya1404Sal/wasmcloud-grpc-client" }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[build-dependencies]
tonic-build = "0.12"
