[package]
name = "inspect"
description = "A wash plugin that implements the `wash inspect` functionality for WebAssembly components"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
wasi = "0.13.3"
wit-bindgen = "0.43.0"
wit-component = "0.221.0"